Updating wrapper for new gradle version and remove java tasks from build script